--- a/tutorials/01_gates.ipynb
+++ b/tutorials/01_gates.ipynb
@@ -37,8 +37,6 @@
    "id": "ecbca859",
    "metadata": {},
    "source": [
-    "## Implementation\n",
-    "\n",
     "In **HybridQ** we use the concept of *properties* to define gates. More precisely, instead of using monolithic gates which are hard to maintain and extend, *every* property is independently implemented so that different object may share multiple properties. This approach not only simplifies the development by allowing a large reuse of the code, it also simplify the maintenance and extension of the code as new features and fix are applied at the level of the properties, and then propagated to all objects using them.\n",
     "\n",
     "For instance, the rotation gate on the <code>X</code> axis inherits the following properties:"
@@ -50,8 +48,8 @@
    "id": "cd97c914",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:35.514463Z",
-     "start_time": "2021-10-28T00:48:35.240068Z"
+     "end_time": "2021-10-29T01:28:47.552575Z",
+     "start_time": "2021-10-29T01:28:47.295906Z"
     }
    },
    "outputs": [
@@ -122,8 +120,8 @@
    "id": "b3a0f8e8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:35.529231Z",
-     "start_time": "2021-10-28T00:48:35.516332Z"
+     "end_time": "2021-10-29T01:28:47.567466Z",
+     "start_time": "2021-10-29T01:28:47.554790Z"
     }
    },
    "outputs": [
@@ -172,8 +170,8 @@
    "id": "a63f6e79",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:35.543921Z",
-     "start_time": "2021-10-28T00:48:35.530698Z"
+     "end_time": "2021-10-29T01:28:47.582283Z",
+     "start_time": "2021-10-29T01:28:47.569029Z"
     }
    },
    "outputs": [
@@ -200,8 +198,8 @@
    "id": "d927f59f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:35.561516Z",
-     "start_time": "2021-10-28T00:48:35.546142Z"
+     "end_time": "2021-10-29T01:28:47.599036Z",
+     "start_time": "2021-10-29T01:28:47.584493Z"
     }
    },
    "outputs": [
@@ -242,8 +240,8 @@
    "id": "e7b5cdf7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.176592Z",
-     "start_time": "2021-10-28T00:48:35.563680Z"
+     "end_time": "2021-10-29T01:28:48.204059Z",
+     "start_time": "2021-10-29T01:28:47.600689Z"
     }
    },
    "outputs": [],
@@ -263,8 +261,8 @@
    "id": "b07d7788",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.238897Z",
-     "start_time": "2021-10-28T00:48:36.178157Z"
+     "end_time": "2021-10-29T01:28:48.270142Z",
+     "start_time": "2021-10-29T01:28:48.205891Z"
     }
    },
    "outputs": [
@@ -301,8 +299,8 @@
    "id": "58cf9fa9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.260489Z",
-     "start_time": "2021-10-28T00:48:36.240995Z"
+     "end_time": "2021-10-29T01:28:48.295790Z",
+     "start_time": "2021-10-29T01:28:48.271936Z"
     }
    },
    "outputs": [],
@@ -319,8 +317,8 @@
    "id": "64e22016",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.289920Z",
-     "start_time": "2021-10-28T00:48:36.262960Z"
+     "end_time": "2021-10-29T01:28:48.325400Z",
+     "start_time": "2021-10-29T01:28:48.297681Z"
     }
    },
    "outputs": [
@@ -356,8 +354,8 @@
    "id": "9a7f0928",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.329135Z",
-     "start_time": "2021-10-28T00:48:36.292149Z"
+     "end_time": "2021-10-29T01:28:48.368846Z",
+     "start_time": "2021-10-29T01:28:48.327811Z"
     }
    },
    "outputs": [
@@ -394,8 +392,8 @@
    "id": "6535f43e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.358822Z",
-     "start_time": "2021-10-28T00:48:36.333763Z"
+     "end_time": "2021-10-29T01:28:48.400827Z",
+     "start_time": "2021-10-29T01:28:48.374235Z"
     }
    },
    "outputs": [],
@@ -426,8 +424,8 @@
    "id": "fc15190a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.402247Z",
-     "start_time": "2021-10-28T00:48:36.360778Z"
+     "end_time": "2021-10-29T01:28:48.426209Z",
+     "start_time": "2021-10-29T01:28:48.403249Z"
     }
    },
    "outputs": [
@@ -435,7 +433,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/dagart/NASA_Local/repository/hybridq-nasa/hybridq/gate/gate.py:291: UserWarning: 'CNOT' is an alias for 'CX'. Using Gate(name='{_gate_aliases[name]}').\n",
+      "/home/dagart/local/miniconda3/envs/hybridq/lib/python3.8/site-packages/hybridq/gate/gate.py:291: UserWarning: 'CNOT' is an alias for 'CX'. Using Gate(name='{_gate_aliases[name]}').\n",
       "  warn(f\"'{name}' is an alias for '{_gate_aliases[name]}'. \"\n"
      ]
     },
@@ -469,8 +467,8 @@
    "id": "976533d6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.427618Z",
-     "start_time": "2021-10-28T00:48:36.405146Z"
+     "end_time": "2021-10-29T01:28:48.453687Z",
+     "start_time": "2021-10-29T01:28:48.428613Z"
     }
    },
    "outputs": [
@@ -511,8 +509,8 @@
    "id": "8410185a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.480237Z",
-     "start_time": "2021-10-28T00:48:36.430184Z"
+     "end_time": "2021-10-29T01:28:48.528281Z",
+     "start_time": "2021-10-29T01:28:48.457012Z"
     }
    },
    "outputs": [
@@ -572,8 +570,8 @@
    "id": "def27173",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.505114Z",
-     "start_time": "2021-10-28T00:48:36.482871Z"
+     "end_time": "2021-10-29T01:28:48.562334Z",
+     "start_time": "2021-10-29T01:28:48.530964Z"
     }
    },
    "outputs": [
@@ -614,8 +612,8 @@
    "id": "3b3d9f4b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.532785Z",
-     "start_time": "2021-10-28T00:48:36.507597Z"
+     "end_time": "2021-10-29T01:28:48.599097Z",
+     "start_time": "2021-10-29T01:28:48.564945Z"
     }
    },
    "outputs": [
@@ -657,8 +655,8 @@
    "id": "ebe94305",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.554804Z",
-     "start_time": "2021-10-28T00:48:36.534776Z"
+     "end_time": "2021-10-29T01:28:48.652325Z",
+     "start_time": "2021-10-29T01:28:48.601802Z"
     }
    },
    "outputs": [
@@ -732,8 +730,8 @@
    "id": "fd54678f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.577726Z",
-     "start_time": "2021-10-28T00:48:36.556500Z"
+     "end_time": "2021-10-29T01:28:48.693901Z",
+     "start_time": "2021-10-29T01:28:48.655447Z"
     }
    },
    "outputs": [
@@ -793,8 +791,8 @@
    "id": "809288ed",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.618196Z",
-     "start_time": "2021-10-28T00:48:36.579400Z"
+     "end_time": "2021-10-29T01:28:48.737611Z",
+     "start_time": "2021-10-29T01:28:48.695823Z"
     }
    },
    "outputs": [
@@ -866,8 +864,8 @@
    "id": "2d33538f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:36.750949Z",
-     "start_time": "2021-10-28T00:48:36.620200Z"
+     "end_time": "2021-10-29T01:28:48.883750Z",
+     "start_time": "2021-10-29T01:28:48.740529Z"
     }
    },
    "outputs": [],
@@ -945,8 +943,8 @@
    "id": "b4e4683e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:43.683715Z",
-     "start_time": "2021-10-28T00:48:36.752822Z"
+     "end_time": "2021-10-29T01:28:55.805725Z",
+     "start_time": "2021-10-29T01:28:48.887335Z"
     }
    },
    "outputs": [
@@ -954,7 +952,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Y', 'Z', 'I', 'Z', 'I', 'I', 'I', 'I', 'I', 'I']\n"
+      "['I', 'Y', 'I', 'Y', 'I', 'I', 'X', 'I', 'Z', 'Y']\n"
      ]
     }
    ],
@@ -1002,8 +1000,8 @@
    "id": "59a3c014",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:43.721154Z",
-     "start_time": "2021-10-28T00:48:43.685430Z"
+     "end_time": "2021-10-29T01:28:55.830180Z",
+     "start_time": "2021-10-29T01:28:55.807289Z"
     }
    },
    "outputs": [],
@@ -1061,8 +1059,8 @@
    "id": "bce78f87",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:43.783095Z",
-     "start_time": "2021-10-28T00:48:43.722809Z"
+     "end_time": "2021-10-29T01:28:55.855913Z",
+     "start_time": "2021-10-29T01:28:55.832062Z"
     }
    },
    "outputs": [
@@ -1070,7 +1068,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/dagart/NASA_Local/repository/hybridq-nasa/hybridq/utils/transpose.py:166: UserWarning: Fallback to 'numpy.transpose'\n",
+      "/home/dagart/local/miniconda3/envs/hybridq/lib/python3.8/site-packages/hybridq/utils/transpose.py:166: UserWarning: Fallback to 'numpy.transpose'\n",
       "  warn(\"Fallback to 'numpy.transpose'\")\n"
      ]
     }
@@ -1117,8 +1115,8 @@
    "id": "c9cf515d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-28T00:48:43.830945Z",
-     "start_time": "2021-10-28T00:48:43.786297Z"
+     "end_time": "2021-10-29T01:28:55.896645Z",
+     "start_time": "2021-10-29T01:28:55.858751Z"
     }
    },
    "outputs": [
@@ -1127,11 +1125,11 @@
      "output_type": "stream",
      "text": [
       "FunctionalGate(name='FUNCTIONAL', n_qubits=3)\n",
-      "* 000: -0.353553\n",
+      "  000: +0.353553\n",
       "  001: +0.353553\n",
       "  010: +0.353553\n",
       "  011: +0.353553\n",
-      "  100: +0.353553\n",
+      "* 100: -0.353553\n",
       "  101: +0.353553\n",
       "  110: +0.353553\n",
       "  111: +0.353553\n"
@@ -1222,6 +1220,301 @@
     "    # Print\n",
     "    print('{0} {1}: {2:+g}'.format('*' if i == target_state else ' ', i,\n",
     "                                   np.real_if_close(x)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02248b2b",
+   "metadata": {},
+   "source": [
+    "## Gate Implementation\n",
+    "\n",
+    "Every property must inherit from <code>\\_\\_Base__</code>, which will add to the object the basic functionality to work with the **HybridQ** library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "224931a1",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-29T01:28:55.936666Z",
+     "start_time": "2021-10-29T01:28:55.899405Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from hybridq.base import __Base__\n",
+    "\n",
+    "\n",
+    "class A(__Base__):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98b2c716",
+   "metadata": {},
+   "source": [
+    "The **HybridQ** library provides useful decorator to help developing new properties. At the moment, **HybridQ** provides:\n",
+    "<od>\n",
+    "    <li><code>staticvars</code>\n",
+    "    <li><code>compare</code>\n",
+    "    <li><code>requires</code>\n",
+    "    <li><code>generate</code>\n",
+    "</od>\n",
+    "\n",
+    "<code>staticvars</code> is used to add variables which must provided while creating the object. <code>compare</code> is used to specify which variables should be compared in <code>\\_\\_eq__</code>. Similarly, <code>requires</code> is used to specify which variables the final object should have once created. Finally, <code>generate</code> is used to create **HybridQ** objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0958f565",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-29T01:28:55.969102Z",
+     "start_time": "2021-10-29T01:28:55.939785Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, '2.2')\n",
+      "Check failed for 'a'\n",
+      "Static variable 'b' must be provided.\n",
+      "Cannot set static variable\n"
+     ]
+    }
+   ],
+   "source": [
+    "from hybridq.base import staticvars, generate\n",
+    "\n",
+    "\n",
+    "# Let's start creating an object with two static variables a and b,\n",
+    "# with a having a default value a=1. We want to make sure that a is\n",
+    "# always an integer between 0 and 10 while b can be any string.\n",
+    "@staticvars('a,b',\n",
+    "            a=1,\n",
+    "            transform=dict(a=int, b=str),\n",
+    "            check=dict(a=lambda x: 0 <= x <= 10))\n",
+    "class A(__Base__):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "# Generate new type\n",
+    "new_type = generate('NewType', (A, ), b=2.2)\n",
+    "\n",
+    "# Get new object\n",
+    "o = new_type()\n",
+    "\n",
+    "# Get values\n",
+    "print((o.a, o.b))\n",
+    "\n",
+    "# Trying to create a new type with a not in [0, 10] will fail\n",
+    "try:\n",
+    "    generate('NewType', (A, ), a=-1, b='this is a string')\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "else:\n",
+    "    raise RuntimeError(\"Something went wrong\")\n",
+    "\n",
+    "# Also, not specifying b will fail\n",
+    "try:\n",
+    "    generate('NewType', (A, ))\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "else:\n",
+    "    raise RuntimeError(\"Something went wrong\")\n",
+    "\n",
+    "# Static variables are by default read-only\n",
+    "try:\n",
+    "    o.a = 1\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "else:\n",
+    "    raise RuntimeError(\"Something went wrong\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7a3a31dc",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-29T01:28:56.001390Z",
+     "start_time": "2021-10-29T01:28:55.971635Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from hybridq.base import compare\n",
+    "\n",
+    "# By default, '__eq__' does not compare any variables\n",
+    "o1 = generate('NewType', (A, ), a=1, b=2)()\n",
+    "o2 = generate('NewType', (A, ), a=3, b='hello!')()\n",
+    "\n",
+    "# Even if the two objects have different static vars,\n",
+    "# __eq__ returns True\n",
+    "assert (o1 == o2)\n",
+    "\n",
+    "\n",
+    "# The decorator 'compare' can be used to specify which\n",
+    "# variables to compare\n",
+    "@compare('a,c', cmp=dict(c=lambda x, y: int(x) == int(y)))\n",
+    "class B(A, b='default'):\n",
+    "    def __init_subclass__(cls, b=None, **kwargs):\n",
+    "        # If 'b' is not provided, use the default value\n",
+    "        b = cls.__get_staticvar__('b') if b is None else b\n",
+    "\n",
+    "        # Call super\n",
+    "        super().__init_subclass__(b=b, **kwargs)\n",
+    "\n",
+    "    def __init__(self, c):\n",
+    "        self.c = c\n",
+    "\n",
+    "\n",
+    "# Generate new objects\n",
+    "o1 = generate('NewTypeB', (B, ))(c=1)\n",
+    "o2 = generate('NewTypeB', (B, ))(c=2)\n",
+    "o3 = generate('NewTypeB', (B, ), b='not default')(c=1.3)\n",
+    "\n",
+    "# Because a and c are compared, only o1 == o3\n",
+    "assert (o1 != o2)\n",
+    "assert (o1 == o3)\n",
+    "assert (o2 != o3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4a9fa26d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-29T01:28:56.036251Z",
+     "start_time": "2021-10-29T01:28:56.004117Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following required attributes are not provided: ('b',)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "hybridq.base.base.NewType"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from hybridq.base import requires\n",
+    "\n",
+    "\n",
+    "# Object may require variables that are not directly\n",
+    "# implemented but provided at the creation time\n",
+    "@requires('b')\n",
+    "class A(__Base__):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "@staticvars('b')\n",
+    "class B(__Base__):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "# Creating a new type with 'A' alone will fail\n",
+    "try:\n",
+    "    generate('NewType', (A, ))\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "else:\n",
+    "    raise RuntimeError(\"Something went wrong\")\n",
+    "\n",
+    "# However, since 'B' provides 'b', generating a\n",
+    "# new type from (B, A) will succede\n",
+    "generate('NewType', (B, A), b=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1fb24d38",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-29T01:28:56.077532Z",
+     "start_time": "2021-10-29T01:28:56.044930Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o[a] = 1\n",
+      "o[b] = 2\n",
+      "o[c] = 3\n",
+      "o[x] = a\n",
+      "o[y] = b\n",
+      "o[q] = test\n",
+      "---\n",
+      "o[a] = 1\n",
+      "o[b] = 2\n",
+      "o[c] = 3\n",
+      "o[x] = a\n",
+      "o[y] = b\n",
+      "o[q] = test\n",
+      "---\n",
+      "hash(o) = -1981530160492540838\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "\n",
+    "# All objects derived from __Base__ are pickable. This\n",
+    "# is very useful when the use of 'multiprocessing' is\n",
+    "# required\n",
+    "@staticvars('a,b,c', a=1, b=2, c=3)\n",
+    "class A(__Base__):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "@staticvars('x,y', x='a', y='b')\n",
+    "class B(A):\n",
+    "    def __init__(self, q=None):\n",
+    "        self.q = q\n",
+    "\n",
+    "\n",
+    "# Get new object\n",
+    "o = generate('NewType', (B, A))(q='test')\n",
+    "\n",
+    "# Print\n",
+    "for k in 'abcxyq':\n",
+    "    print(f'o[{k}] = {getattr(o, k)}')\n",
+    "\n",
+    "# Dump/load using pickle\n",
+    "o = pickle.loads(pickle.dumps(o))\n",
+    "\n",
+    "# Print\n",
+    "print('---')\n",
+    "for k in 'abcxyq':\n",
+    "    print(f'o[{k}] = {getattr(o, k)}')\n",
+    "\n",
+    "# __Base__ objects can also be hashed. Hashing is\n",
+    "# done by using binary provided by pickle\n",
+    "print('---')\n",
+    "print(f'hash(o) = {hash(o)}')"
    ]
   }
  ],
