--- a/examples/SC21/SC21_noise_figs_Sect_VI.ipynb
+++ b/examples/SC21/SC21_noise_figs_Sect_VI.ipynb
@@ -1,20 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "5c55343e-4c69-4a0e-9c86-f0d3ef8bb332",
+   "cell_type": "markdown",
+   "id": "11c073a2-2468-43bd-9925-ceca9ae29121",
    "metadata": {},
    "source": [
-    "Authors: Salvatore Mandra (salvatore.mandra@nasa.gov),\n",
-    "         Jeffrey Marshall (jeffrey.s.marshall@nasa.gov)\n",
+    "Authors: Salvatore Mandra (salvatore.mandra@nasa.gov)<br>\n",
+    "&emsp;&emsp;&emsp;&emsp;Jeffrey Marshall (jeffrey.s.marshall@nasa.gov)\n",
     "\n",
     "Copyright © 2021, United States Government, as represented by the Administrator\n",
     "of the National Aeronautics and Space Administration. All rights reserved.\n",
     "\n",
-    "The HybridQ: A Hybrid Simulator for Quantum Circuits platform is licensed under\n",
+    "The *HybridQ: A Hybrid Simulator for Quantum Circuits* platform is licensed under\n",
     "the Apache License, Version 2.0 (the \"License\"); you may not use this file\n",
     "except in compliance with the License. You may obtain a copy of the License at\n",
-    "http://www.apache.org/licenses/LICENSE-2.0.\n",
+    "http://www.apache.org/licenses/LICENSE-2.0. \n",
     "\n",
     "Unless required by applicable law or agreed to in writing, software distributed\n",
     "under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bad14cf5-5112-4afe-8c61-6b5b1c5cfa37",
+   "id": "8d40b371-640e-42a0-b9d9-b189820fca98",
    "metadata": {},
    "source": [
     "### This notebook contains all of the code to generate the plots of the noisy simulations in the SC21 paper.\n",
