--- a/tutorials/XX_noise.ipynb
+++ b/tutorials/XX_noise.ipynb
@@ -55,7 +55,7 @@
     "from hybridq.dm.gate import Gate as NoiseGate\n",
     "from hybridq.dm.circuit.simulation import simulate as dm_simulate\n",
     "from hybridq.noise.utils import add_depolarizing_noise\n",
-    "from hybridq.noise.channel.utils import ptrace, is_channel, is_dm\n",
+    "from hybridq.noise.channel.utils import ptrace, is_channel, is_dm, reconstruct_dm\n",
     "from hybridq.noise.channel import *\n"
    ]
   },
@@ -235,30 +235,41 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jeff/opt/anaconda3/envs/hybridq/lib/python3.8/site-packages/hybridq/gate/gate.py:560: UserWarning: Using default number of qubits 'n_qubits=1'.\n",
+      "  warn(\"Using default number of qubits 'n_qubits=1'.\")\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "random unitary circuit:\n",
       "Circuit([\n",
-      "\tMatrixGate(name='MATRIX', qubits=(2, 0), M=numpy.ndarray(shape=(4, 4), dtype=complex128)),\n",
-      "\tMatrixGate(name='MATRIX', qubits=(2, 0), M=numpy.ndarray(shape=(4, 4), dtype=complex128)),\n",
-      "\tMatrixGate(name='MATRIX', qubits=(0, 1), M=numpy.ndarray(shape=(4, 4), dtype=complex128)),\n",
-      "\tMatrixGate(name='MATRIX', qubits=(1, 2), M=numpy.ndarray(shape=(4, 4), dtype=complex128)),\n",
-      "\tGate_H^+(name='H', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=float64))**0.8804\n",
+      "\tMatrixGate(name='MATRIX', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))\n",
+      "\tGate_SWAP^+(name='SWAP', qubits=(2, 0), M=numpy.ndarray(shape=(4, 4), dtype=int64))**0.7895\n",
+      "\tGate_Y^T(name='Y', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))**0.54561\n",
+      "\tMatrixGate(name='MATRIX', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))\n",
+      "\t...\n",
+      "\tGate_SQRT_Y^T(name='SQRT_Y', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))**0.71672,\n",
+      "\tMatrixGate(name='MATRIX', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=complex128)),\n",
+      "\tMatrixGate(name='MATRIX', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=complex128)),\n",
+      "\tGate_Z^T(name='Z', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=int64))**0.55317\n",
       "])\n",
       "\n",
       "circuit after adding noise:\n",
       "Circuit([\n",
-      "\tMatrixGate(name='MATRIX', qubits=(2, 0), M=numpy.ndarray(shape=(4, 4), dtype=complex128)),\n",
-      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(2, 0), s.shape=(16,), p=0.015),\n",
-      "\tMatrixGate(name='MATRIX', qubits=(2, 0), M=numpy.ndarray(shape=(4, 4), dtype=complex128)),\n",
-      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(2, 0), s.shape=(16,), p=0.015),\n",
-      "\tMatrixGate(name='MATRIX', qubits=(0, 1), M=numpy.ndarray(shape=(4, 4), dtype=complex128)),\n",
-      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(0, 1), s.shape=(16,), p=0.015),\n",
-      "\tMatrixGate(name='MATRIX', qubits=(1, 2), M=numpy.ndarray(shape=(4, 4), dtype=complex128)),\n",
-      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(1, 2), s.shape=(16,), p=0.015),\n",
-      "\tGate_H^+(name='H', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=float64))**0.8804,\n",
+      "\tMatrixGate(name='MATRIX', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))\n",
       "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(1,), s.shape=(4,), p=0.01)\n",
+      "\tGate_SWAP^+(name='SWAP', qubits=(2, 0), M=numpy.ndarray(shape=(4, 4), dtype=int64))**0.7895\n",
+      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(2, 0), s.shape=(16,), p=0.015)\n",
+      "\t...\n",
+      "\tMatrixGate(name='MATRIX', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=complex128)),\n",
+      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(2,), s.shape=(4,), p=0.01),\n",
+      "\tGate_Z^T(name='Z', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=int64))**0.55317,\n",
+      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(2,), s.shape=(4,), p=0.01)\n",
       "])\n"
      ]
     }
@@ -285,22 +296,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ac3a1bb8-ca3a-485c-9ca9-e3c6076b8c98",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jeff/opt/anaconda3/envs/hybridq/lib/python3.8/site-packages/hybridq/circuit/simulation/simulation.py:408: UserWarning: The system is too small to use optimize='evolution-hybridq'. Falling back to optimize='evolution-einsum'\n",
+      "  warn(\"The system is too small to use optimize='evolution-hybridq'. \"\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.560913  -3.1670018e-09j -0.12309102-9.3809694e-02j\n",
-      "  -0.15441972+2.8111242e-02j  0.15053119+2.4537015e-01j]\n",
-      " [-0.12309103+9.3809679e-02j  0.09961789-2.4455465e-08j\n",
-      "   0.03775969-4.3317378e-02j -0.0863193 -2.7367387e-02j]\n",
-      " [-0.15441978-2.8111234e-02j  0.03775969+4.3317325e-02j\n",
-      "   0.11373787-1.1139647e-08j -0.03620028-8.9752831e-02j]\n",
-      " [ 0.15053116-2.4537018e-01j -0.08631925+2.7367307e-02j\n",
-      "  -0.03620033+8.9752823e-02j  0.2257311 -3.2209929e-08j]]\n",
+      "[[ 0.25557825-4.7719805e-08j -0.18755078-1.1665751e-01j\n",
+      "   0.19929439-6.8016693e-02j  0.07288552+1.2647104e-01j]\n",
+      " [-0.18755075+1.1665749e-01j  0.28544098-1.5842961e-08j\n",
+      "  -0.14949699+1.7884606e-01j -0.13691379-7.2110042e-02j]\n",
+      " [ 0.19929437+6.8016693e-02j -0.14949694-1.7884606e-01j\n",
+      "   0.2861157 -1.9542640e-08j  0.0268449 +1.5166792e-01j]\n",
+      " [ 0.07288551-1.2647106e-01j -0.1369138 +7.2109997e-02j\n",
+      "   0.02684486-1.5166785e-01j  0.17286487-4.1691820e-08j]]\n",
       "output is_dm = True\n"
      ]
     }
@@ -335,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5b50bdc1-79c1-4bc8-a0e2-fba21fb4c5b5",
    "metadata": {},
    "outputs": [
@@ -358,12 +377,12 @@
      "output_type": "stream",
      "text": [
       "tensor network output:\n",
-      "[[ 0.291769+0.j      -0.101509-0.21681j]\n",
-      " [-0.101509+0.21681j  0.708231-0.j     ]]\n",
+      "[[ 0.663358+0.j       -0.329652+0.082732j]\n",
+      " [-0.329652-0.082732j  0.336642+0.j      ]]\n",
       "\n",
       "full evolution with partial trace:\n",
-      "[[ 0.291769+0.j      -0.101509-0.21681j]\n",
-      " [-0.101509+0.21681j  0.708231+0.j     ]]\n"
+      "[[ 0.663358+0.j       -0.329652+0.082732j]\n",
+      " [-0.329652-0.082732j  0.336642-0.j      ]]\n"
      ]
     }
    ],
@@ -388,9 +407,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c6e83c01-c57f-4cc9-9161-3f22e2b0e2d3",
+   "metadata": {},
+   "source": [
+    "## Kraus operator pure state sampling\n",
+    "\n",
+    "Instead of applying the Kraus operators directly on a density matrix, **HybridQ** supports an option to sample the Kraus operators probabilistically on a pure state. This can be done so long as the left and right Kraus operators are the same, i.e. of the form $\\sum_i K_i \\rho K_i^\\dagger$. Then, for $\\rho = |\\psi \\rangle \\langle \\psi |$, the Kraus operator $K_i$ is applied with probability $P_i = |\\langle \\psi | K_i^\\dagger K_i |\\psi\\rangle|^2$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ebbaa87c-cd61-43e5-a8d0-a39be221ddcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.70710677+0.j 0.70710677+0.j]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# channel with the same left/right Kraus operators\n",
+    "# setting p=1 means I, X, Y, Z applied with equal probability\n",
+    "gdc = GlobalDepolarizingChannel([0], p=0.1)\n",
+    "c = SuperCircuit([gdc])\n",
+    "\n",
+    "# see example run on a single state\n",
+    "# we set `remove_id_gates` to False to avoid \n",
+    "psi = simulate(c, '+', allow_sampling=True, remove_id_gates=False)\n",
+    "\n",
+    "# output is a pure state, one of I|+>=|+>, X|+>=|+>, Y|+>, Z|+>=|->\n",
+    "print(psi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "daf16287-7e0f-4e14-bec6-ada7f5462406",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rho out from simulation of 250 samples:\n",
+      "[[0.5  +0.j 0.372+0.j]\n",
+      " [0.372+0.j 0.5  +0.j]]\n",
+      "\n",
+      "expected rho_out:\n",
+      "[[0.5   0.375]\n",
+      " [0.375 0.5  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "p=0.25\n",
+    "n_sample = 250\n",
+    "\n",
+    "gdc = GlobalDepolarizingChannel([0], p=p)\n",
+    "c = SuperCircuit([gdc])\n",
+    "\n",
+    "states = []\n",
+    "for _ in range(n_sample):\n",
+    "    psi = simulate(c, '+', allow_sampling=True, remove_id_gates=False)\n",
+    "    states.append(psi)\n",
+    "\n",
+    "# there is a function to sum up the pure states into a density matrix\n",
+    "rho_out = reconstruct_dm(states)\n",
+    "\n",
+    "print(f\"rho out from simulation of {n_sample} samples:\")\n",
+    "print(np.round(rho_out, 4))\n",
+    "\n",
+    "print()\n",
+    "print(\"expected rho_out:\")\n",
+    "rho_exp = (1-p) * np.ones((2,2)) / 2 + p * np.eye(2) / 2\n",
+    "print(rho_exp)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a02bfb8d-4263-4ee7-b899-29aca25fa879",
+   "id": "65fc9ac3-a574-4a7a-8402-63ce4f67888c",
    "metadata": {},
    "outputs": [],
    "source": []
