--- a/tutorials/XX_noise.ipynb
+++ b/tutorials/XX_noise.ipynb
@@ -248,28 +248,28 @@
      "text": [
       "random unitary circuit:\n",
       "Circuit([\n",
-      "\tMatrixGate(name='MATRIX', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))\n",
-      "\tGate_SWAP^+(name='SWAP', qubits=(2, 0), M=numpy.ndarray(shape=(4, 4), dtype=int64))**0.7895\n",
-      "\tGate_Y^T(name='Y', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))**0.54561\n",
-      "\tMatrixGate(name='MATRIX', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))\n",
+      "\tGate_SQRT_SWAP^*(name='SQRT_SWAP', qubits=(1, 2), M=numpy.ndarray(shape=(4, 4), dtype=complex128))**0.94448\n",
+      "\tGate_CZ^+(name='CZ', qubits=(0, 2), M=numpy.ndarray(shape=(4, 4), dtype=int64))**0.61783\n",
+      "\tMatrixGate(name='MATRIX', qubits=(0,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))\n",
+      "\tMatrixGate(name='MATRIX', qubits=(2, 1), M=numpy.ndarray(shape=(4, 4), dtype=complex128))\n",
       "\t...\n",
-      "\tGate_SQRT_Y^T(name='SQRT_Y', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))**0.71672,\n",
+      "\tGate_SQRT_Y(name='SQRT_Y', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))**0.11861,\n",
       "\tMatrixGate(name='MATRIX', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=complex128)),\n",
-      "\tMatrixGate(name='MATRIX', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=complex128)),\n",
-      "\tGate_Z^T(name='Z', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=int64))**0.55317\n",
+      "\tMatrixGate(name='MATRIX', qubits=(1, 0), M=numpy.ndarray(shape=(4, 4), dtype=complex128)),\n",
+      "\tGate_ZZ^*(name='ZZ', qubits=(1, 0), M=numpy.ndarray(shape=(4, 4), dtype=int64))**0.05721\n",
       "])\n",
       "\n",
       "circuit after adding noise:\n",
       "Circuit([\n",
-      "\tMatrixGate(name='MATRIX', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))\n",
-      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(1,), s.shape=(4,), p=0.01)\n",
-      "\tGate_SWAP^+(name='SWAP', qubits=(2, 0), M=numpy.ndarray(shape=(4, 4), dtype=int64))**0.7895\n",
-      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(2, 0), s.shape=(16,), p=0.015)\n",
+      "\tGate_SQRT_SWAP^*(name='SQRT_SWAP', qubits=(1, 2), M=numpy.ndarray(shape=(4, 4), dtype=complex128))**0.94448\n",
+      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(1, 2), s.shape=(16,), p=0.015)\n",
+      "\tGate_CZ^+(name='CZ', qubits=(0, 2), M=numpy.ndarray(shape=(4, 4), dtype=int64))**0.61783\n",
+      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(0, 2), s.shape=(16,), p=0.015)\n",
       "\t...\n",
-      "\tMatrixGate(name='MATRIX', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=complex128)),\n",
-      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(2,), s.shape=(4,), p=0.01),\n",
-      "\tGate_Z^T(name='Z', qubits=(2,), M=numpy.ndarray(shape=(2, 2), dtype=int64))**0.55317,\n",
-      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(2,), s.shape=(4,), p=0.01)\n",
+      "\tMatrixGate(name='MATRIX', qubits=(1, 0), M=numpy.ndarray(shape=(4, 4), dtype=complex128)),\n",
+      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(1, 0), s.shape=(16,), p=0.015),\n",
+      "\tGate_ZZ^*(name='ZZ', qubits=(1, 0), M=numpy.ndarray(shape=(4, 4), dtype=int64))**0.05721,\n",
+      "\tGlobalDepolarizingChannel(name='GLOBAL_DEPOLARIZING_CHANNEL', qubits=(1, 0), s.shape=(16,), p=0.015)\n",
       "])\n"
      ]
     }
@@ -312,14 +312,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.25557825-4.7719805e-08j -0.18755078-1.1665751e-01j\n",
-      "   0.19929439-6.8016693e-02j  0.07288552+1.2647104e-01j]\n",
-      " [-0.18755075+1.1665749e-01j  0.28544098-1.5842961e-08j\n",
-      "  -0.14949699+1.7884606e-01j -0.13691379-7.2110042e-02j]\n",
-      " [ 0.19929437+6.8016693e-02j -0.14949694-1.7884606e-01j\n",
-      "   0.2861157 -1.9542640e-08j  0.0268449 +1.5166792e-01j]\n",
-      " [ 0.07288551-1.2647106e-01j -0.1369138 +7.2109997e-02j\n",
-      "   0.02684486-1.5166785e-01j  0.17286487-4.1691820e-08j]]\n",
+      "[[ 0.37538254-1.19558530e-09j -0.00285803-2.25299716e-01j\n",
+      "  -0.17299353+1.06610715e-01j  0.0218471 +1.98528036e-01j]\n",
+      " [-0.00285807+2.25299746e-01j  0.2244091 -2.79082446e-08j\n",
+      "  -0.07323889-1.24401368e-01j -0.14706825+1.33162886e-02j]\n",
+      " [-0.17299354-1.06610730e-01j -0.07323888+1.24401301e-01j\n",
+      "   0.20425305-2.52970489e-09j  0.0589449 -1.25093848e-01j]\n",
+      " [ 0.02184708-1.98528081e-01j -0.14706822-1.33162662e-02j\n",
+      "   0.05894497+1.25093848e-01j  0.19595502-2.33144970e-08j]]\n",
       "output is_dm = True\n"
      ]
     }
@@ -377,12 +377,12 @@
      "output_type": "stream",
      "text": [
       "tensor network output:\n",
-      "[[ 0.663358+0.j       -0.329652+0.082732j]\n",
-      " [-0.329652-0.082732j  0.336642+0.j      ]]\n",
+      "[[0.537376-0.j       0.061301-0.315364j]\n",
+      " [0.061301+0.315364j 0.462624+0.j      ]]\n",
       "\n",
       "full evolution with partial trace:\n",
-      "[[ 0.663358+0.j       -0.329652+0.082732j]\n",
-      " [-0.329652-0.082732j  0.336642-0.j      ]]\n"
+      "[[0.537376+0.j       0.061301-0.315364j]\n",
+      " [0.061301+0.315364j 0.462624-0.j      ]]\n"
      ]
     }
    ],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "ebbaa87c-cd61-43e5-a8d0-a39be221ddcf",
    "metadata": {},
    "outputs": [
@@ -426,19 +426,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.70710677+0.j 0.70710677+0.j]\n"
+      "[ 0.70710677+0.j -0.70710677+0.j]\n"
      ]
     }
    ],
    "source": [
+    "# First a unitary channel\n",
     "\n",
     "# channel with the same left/right Kraus operators\n",
     "# setting p=1 means I, X, Y, Z applied with equal probability\n",
-    "gdc = GlobalDepolarizingChannel([0], p=0.1)\n",
+    "gdc = GlobalDepolarizingChannel([0], p=1.)\n",
     "c = SuperCircuit([gdc])\n",
     "\n",
     "# see example run on a single state\n",
-    "# we set `remove_id_gates` to False to avoid \n",
+    "# Note, since this is a unitary channel, the Kraus operators are sampled before run-time.\n",
+    "# we set remove_id_gates=False so that when the identity is chosen the circuit still runs.\n",
     "psi = simulate(c, '+', allow_sampling=True, remove_id_gates=False)\n",
     "\n",
     "# output is a pure state, one of I|+>=|+>, X|+>=|+>, Y|+>, Z|+>=|->\n",
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "daf16287-7e0f-4e14-bec6-ada7f5462406",
    "metadata": {},
    "outputs": [
@@ -456,8 +458,8 @@
      "output_type": "stream",
      "text": [
       "rho out from simulation of 250 samples:\n",
-      "[[0.5  +0.j 0.372+0.j]\n",
-      " [0.372+0.j 0.5  +0.j]]\n",
+      "[[0.5  +0.j 0.376+0.j]\n",
+      " [0.376+0.j 0.5  +0.j]]\n",
       "\n",
       "expected rho_out:\n",
       "[[0.5   0.375]\n",
@@ -466,6 +468,7 @@
     }
    ],
    "source": [
+    "# now run many samples and reconstruct the density matrix\n",
     "\n",
     "p=0.25\n",
     "n_sample = 250\n",
@@ -492,8 +495,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "65fc9ac3-a574-4a7a-8402-63ce4f67888c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.+0.j 1.+0.j]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now a channel with non-unitary gates that are sampled at run-time\n",
+    "\n",
+    "adc = AmplitudeDampingChannel([0], gamma=0.25)\n",
+    "c = SuperCircuit([adc])\n",
+    "\n",
+    "# we don't need to specify remove_id_gates=False here since the Kraus' are\n",
+    "# sampled at run-time (and none are identity)\n",
+    "psi = simulate(c, '1', allow_sampling=True)\n",
+    "\n",
+    "# the output is either |1> or |0>, with probability depending on gamma.\n",
+    "print(psi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f11d506d-8914-4e89-9e37-76b519ae245a",
    "metadata": {},
    "outputs": [],
    "source": []
