--- a/tutorials/XX_noise.ipynb
+++ b/tutorials/XX_noise.ipynb
@@ -413,7 +413,9 @@
    "source": [
     "## Kraus operator pure state sampling\n",
     "\n",
-    "Instead of applying the Kraus operators directly on a density matrix, **HybridQ** supports an option to sample the Kraus operators probabilistically on a pure state. This can be done so long as the left and right Kraus operators are the same, i.e. of the form $\\sum_i K_i \\rho K_i^\\dagger$. Then, for $\\rho = |\\psi \\rangle \\langle \\psi |$, the Kraus operator $K_i$ is applied with probability $P_i = |\\langle \\psi | K_i^\\dagger K_i |\\psi\\rangle|^2$."
+    "Instead of applying the Kraus operators directly on a density matrix, **HybridQ** supports an option to sample the Kraus operators probabilistically on a pure state. This can be done so long as the left and right Kraus operators are the same, i.e. of the form $\\sum_i K_i \\rho K_i^\\dagger$. Then, for $\\rho = |\\psi \\rangle \\langle \\psi |$, the Kraus operator $K_i$ is applied with probability $P_i = |\\langle \\psi | K_i^\\dagger K_i |\\psi\\rangle|^2$.\n",
+    "\n",
+    "To use sampling, the pure state simulation method <code>hybridq.circuit.simulation</code> should be used, specifying *allow_sampling=True*, which can accept a noise circuit <code>hybridq.dm.circuit</code> containing Kraus operations."
    ]
   },
   {
