--- a/tutorials/XX_noise.ipynb
+++ b/tutorials/XX_noise.ipynb
@@ -510,13 +510,13 @@
     }
    ],
    "source": [
-    "# now a channel with non-unitary gates that are sampled at run-time\n",
+    "# now a channel with non-unitary Kraus operators that are sampled at run-time\n",
     "\n",
     "adc = AmplitudeDampingChannel([0], gamma=0.25)\n",
     "c = SuperCircuit([adc])\n",
     "\n",
     "# we don't need to specify remove_id_gates=False here since the Kraus' are\n",
-    "# sampled at run-time (and none are identity)\n",
+    "# sampled at run-time\n",
     "psi = simulate(c, '1', allow_sampling=True)\n",
     "\n",
     "# the output is either |1> or |0>, with probability depending on gamma.\n",
